[package]
name = "seori"
version = "0.1.0"
authors = ["Justin Parado <justin.parado.personal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-identity = "0.2.1"
actix-service = "1.0.5"
actix-cors = "0.2.0"
actix-session = "0.3.0"
actix-http = "1.0.1"

dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

diesel = {version="1.4.5", features=["postgres", "r2d2"]}

serde = "1.0.114"
serde_json = "1.0.57"

listenfd = "0.3.3"
rust-argon2 = "0.8.2"
futures = "0.3.5"
log = "0.4.11"
env_logger = "0.7.1"
derive_more = "0.99.9"
frank_jwt = "3.1.2"
